--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ input.variation:nth-of-type(1) + label {
 body {
   text-align: center;
   background-color: #1D1F20;
-  color: #ddd3d3;
+  color: #8500B2;
 }
 
 a, a:visited {
